2008-07-23  Michael Hutchinson <mhutchinson@novell.com> 

	* MonoDevelop.AspNet.StateEngine/AspNetSpecialState.cs: Unneeded;
	  removed.
	* MonoDevelop.AspNet.StateEngine/AspNetFreeState.cs: Stubbed.
	* MonoDevelop.AspNet.Gui/AspNetEditorExtension.cs: Use the new XML
	  parser for ASP.NET completion.
	* gtk-gui/objects.xml, gtk-gui/gui.stetic, AspNetAddIn.mdp,
	  Makefile.am: Updated.
	* MonoDevelop.AspNet.Parser/DocumentReferenceManager.cs: Fix tag prefix
	  auto-generation logic.
	* MonoDevelop.AspNet.Parser/CompilationUnitVisitor.cs: Don't fold
	  regions by default.

2008-07-21  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.AspNet.Deployment/WebDeployTarget.cs,
	  MonoDevelop.AspNet/AspNetAppProject.cs,
	  MonoDevelop.AspNet/AspNetAppProjectBinding.cs,
	  MonoDevelop.AspNet/AspNetAppProjectConfiguration.cs,
	  MonoDevelop.AspNet/AspNetToolboxNode.cs,
	  MonoDevelop.AspNet/XspParameters.cs: Moved serialization engine to
	  MonoDevelop.Core. Use new syntax for specifying attribute scope.

2008-07-14  Mike Krüger <mkrueger@novell.com> 

	* MonoDevelop.AspNet.addin.xml: Added javascript mime type (Bug 400896
	  - Syntax Mode for Javascript).

2008-06-25  Michael Hutchinson <mhutchinson@novell.com> 

	* MonoDevelop.AspNet.StateEngine/AspNetSpecialState.cs,
	  MonoDevelop.AspNet.StateEngine/AspNetFreeState.cs,
	  MonoDevelop.AspNet.Gui/AspNetEditorExtension.cs: Rework stack
	  cloning and character rejection mechanisms in XML/ASP state engine.

2008-06-25  Michael Hutchinson <mhutchinson@novell.com> 

	* MonoDevelop.AspNet.Parser/SuggestedHandlerCompletionData.cs: Track
	  API.

2008-06-25  Michael Hutchinson <mhutchinson@novell.com> 

	* MonoDevelop.AspNet/CodeBehind.cs: Use case-insensitive checks on
	  filenames.

2008-06-19  Michael Hutchinson <mhutchinson@novell.com> 

	* MonoDevelop.AspNet.Gui/AspNetEditorExtension.cs: Track BindingService
	  API. Fix possible skipping of Gdk.Threads.Leave().
	* MonoDevelop.Html/DocTypeCompletionDataProvider.cs,