@@ -61,7 +61,6 @@
     <File name="gtk-gui/generated.cs" subtype="Code" buildaction="Compile" />
     <File name="MonoDevelop.AspNet/CodeBehind.cs" subtype="Code" buildaction="Compile" />
     <File name="gtk-gui/gui.stetic" subtype="Code" buildaction="EmbedAsResource" />
-    <File name="gtk-gui/objects.xml" subtype="Code" buildaction="EmbedAsResource" />
     <File name="MonoDevelop.AspNet.Gui/AspNetConfigurationPanelWidget.cs" subtype="Code" buildaction="Compile" />
     <File name="ChangeLog" subtype="Code" buildaction="Nothing" />
     <File name="Templates/GlobalAsax-CodeBehind.xft.xml" subtype="Code" buildaction="EmbedAsResource" />
