@@ -1,2 +1,0 @@
-<objects attr-sync="on">
-</objects>
